...

    <item
        android:id="@+id/tagsFragment"
        android:title="Tags"
        android:icon="@drawable/icon_tag"/>
    <item
        android:id="@+id/itemsFragment"
        android:title="Items"
        android:icon="@drawable/icon_inventory"/>
</menu>
