<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/profileFragment"
        android:title="Profile"
        android:icon="@drawable/icon_person"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/toolbar_trash"
        app:showAsAction="ifRoom"
        android:title="Trash"
        android:icon="@drawable/icon_edit"/>
</menu>