...
            android:minHeight="?attr/actionBarSize"
            android:layout_weight="0"
            android:visibility="visible"
            app:menu="@menu/toolbar_menu"/>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/navHostFragment"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:defaultNavHost="true"
            app:navGraph="@navigation/navgraph" />
...
